<resources>
    <string name="app_name">Hackillinois</string>

    <!-- Navigation Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_map">Map</string>
    <string name="menu_profile">Badge</string>

    <!-- Login Chooser -->
    <string name="i_am_a">I AM A</string>
    <string name="next">NEXT</string>
    <string name="hacker">Hacker</string>
    <string name="mentor">Mentor</string>
    <string name="staff_member">Staff Member</string>
    <string name="volunteer">Volunteer</string>
    <string name="happening_now">Happening now</string>
    <string name="hacking_ends_in">Hacking ends in:</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_in">Sign In</string>
    <string name="failure">Failed!</string>
    <string name="normal_login_failed">Login attempt failed. Please try again</string>
    <string name="failed_incorrect_login">Login Failed. Email/Password Combination Was Incorrect.</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="announcement">ANNOUNCEMENT</string>
    <string name="hour_title">H</string>
    <string name="minute_title">M</string>
    <string name="second_title">S</string>
    <string name="day_title">D</string>
    <string name="log_out">Log Out</string>
    <string name="do_log_out">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notified_before_event_starts">You will be notified %d %s before %s starts.</string>
    <string name="event_starts_at">%s starts at %s</string>
    <string name="hackillinois_starts_in">HackIllinois Begins In</string>
    <string name="hacking_starts_in">Hacking Begins In</string>
    <string name="hackillinois_ends_in">HackIllinois Ends In</string>
    <string name="no_location">No location</string>
    <string name="username_hint">USERNAME</string>
    <string name="password_hint">PASSWORD</string>
    <string name="check_in_hacker">Check In Hacker</string>
    <string name="announcement_title">Announcement Title</string>
    <string name="announcement_description">Announcement Description</string>
    <string name="event_name">Event Name</string>
    <string name="event_duration_in_minutes">Event Duration (in minutes)</string>
    <string name="launch_announcement">Launch Announcement</string>
    <string name="start_tracking_event">Start tracking event</string>
    <string name="open_recruiter_tools">Open Recruiter Tools</string>
    <string name="launch_admin_tools">Launch Admin Tools</string>
    <string name="start_new_application">Scan New Applicant</string>
    <string name="submit_application">Submit</string>
    <string name="cancel_application">Clear</string>
    <string name="favorite_this_applicant">Favorite this applicant</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="user_id">User Id</string>
</resources>
